# will

./: .gitignore  CLAUDE.md  HANDOFF.md  ORIENTATION.md  PLAN.md  README.md  SETUP.md  config.example.json  setup.bat  setup.sh
.claude/: settings.json
.claude-plugin/: marketplace.json
agent-tools/: statusline.py
bootstrap/: README.md  setup.ps1  setup.sh
plugins/: install.ps1  install.sh
plugins/.claude-plugin/: marketplace.json
problems/: windows-hardware.md
projects/: README.md
projects/_template/: 02-requirements.md  03-specification.md  04-design.md  05-implementation.md  README.md  STATUS.md
projects/agent-scheduling/: 01-research.md  02-requirements.md  03-specification.md  04-design.md  05-implementation.md  README.md  STATUS.md
projects/agent-scheduling/code/: .gitignore  README.md  pyproject.toml
projects/agent-scheduling/code/src/agent_scheduling/: __init__.py  context.py  negotiator.py  pattern.py  privacy.py  protocol.py  solver.py
projects/agent-scheduling/code/src/agent_scheduling/adapters/: __init__.py  base.py  mock.py
projects/agent-scheduling/code/src/agent_scheduling/platform/: __init__.py  api.py  chat.py
projects/agent-scheduling/code/tests/: test_adapter_mock.py  test_context.py  test_negotiator.py  test_pattern.py  test_platform_api.py  test_privacy.py  test_protocol.py  test_solver.py
projects/email-connector/: 01-research.md  README.md  STATUS.md
reflections/: 2026-04-06-health.md
system/: context-architecture.md  conventions.md  docs-as-inputs.md  hardware.md  permissions.md
tools/: commit_push.py
(+19 files in other folders)
