[project]
name = "agent-scheduling"
version = "0.1.0"
description = "Cohort scheduling via agent-to-agent negotiation. First of a multi-context group platform."
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
